<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rbtn_eur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_eur"
            android:onClick="checkStatus"
            />

        <RadioButton
            android:id="@+id/rbtn_usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_usd"
            android:onClick="checkStatus"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/txt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/txt_choose"
        android:textSize="28sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/input_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/txt_write"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_conv"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="converter"
        android:text="@string/btn_text"
        app:iconTint="#FFFFFF" />

    <TextView
        android:id="@+id/txt_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/txt_output"
        android:textColor="@color/black"
        android:textSize="28sp" />

</LinearLayout>